--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,22 @@
       record('learnSecurity', '')
     }
 
+    function recordGithubTop() {
+      record('githubTop', '')
+    }
+
+    function recordGithubBottom() {
+      record('githubBottom', '')
+    }
+
+    function recordBlog() {
+      record('blog', '')
+    }
+
+    function recordContact() {
+      record('contact', '')
+    }
+
     emailSubmitted = false
 
     function subscribe1() {
@@ -98,7 +114,6 @@
         req = new ActiveXObject("Microsoft.XMLHTTP");
       }
       if (req != undefined) {
-        // req.overrideMimeType("application/json"); // if request result is JSON
         try {
           req.open("POST", url2get, false); // 3rd param is whether "async"
         }
@@ -106,6 +121,7 @@
           alert("couldnt complete request. Is JS enabled for that domain?\\n\\n" + err.message);
           return false;
         }
+        req.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
         req.send(sendstr); // param string only used for POST
 
         if (req.readyState == 4) { // only if req is "loaded"
@@ -205,7 +221,7 @@
             device.&nbsp; It shares data with other devices through IPFS and Arweave blockchains.&nbsp; Phone and web
             applications access data directly on the device without having to store it themselves or send it over the
             network.&nbsp; Turbase puts you in control of who you share data with and how much you share.<br>
-            <br>Turbase uses the <a href="https://github.com/autonomous-interdependent-repositories/AIRport"
+            <br>Turbase uses the <a onclick="recordGithubTop()" href="https://github.com/autonomous-interdependent-repositories/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">AIRport
               Decentralized Application framework</a>.&nbsp; It is now under ​heavy&nbsp;development and will be
             ​available&nbsp;in 2022.&nbsp; Subscribe to the monthly Turbase newsletter to stay tuned.
@@ -311,9 +327,9 @@
           <h1 class="u-custom-font u-text u-text-1">Stay tuned</h1>
           <p class="u-custom-font u-text u-text-2">Turbase and the AIRport engine behind it are now under heavy
             development stay tuned in on what's going on by subscribing to the monthly newsletter.&nbsp; Checkout the
-            development progress on <a href="https://github.com/autonomous-interdependent-repositories/AIRport"
+            development progress on <a onclick="recordGithubBottom()" href="https://github.com/autonomous-interdependent-repositories/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1">Github</a>
-            or visit the <a href="https://dataindependence.net/blog/"
+            or visit the <a onclick="recordBlog()" href="https://dataindependence.net/blog/"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2">blog</a>
             for technical details.
           </p>
@@ -354,7 +370,7 @@
   <footer class="u-align-center u-clearfix u-custom-color-2 u-footer u-footer" id="sec-619d">
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-custom-font u-small-text u-text u-text-variant u-text-1">Turbase DAO<br>
-        <a href="mailto:artem.v.shamsutdinov@dataindependence.net?subject=Turbase%20App"
+        <a onclick="recordContact()" href="mailto:artem.v.shamsutdinov@dataindependence.net?subject=Turbase%20App"
           class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">Contact</a>
       </p>
     </div>
