Simplified the message.

--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
         data-image-height="1200"></div>
       <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
-          <h3 class="u-custom-font u-text u-text-grey-50 u-text-1">own YOUR DATA WITH ON-PHONE DATABASE</h3>
+          <h3 class="u-custom-font u-text u-text-grey-50 u-text-1">Your Personal Database</h3>
           <h2 class="u-align-left u-custom-font u-text u-text-custom-color-1 u-text-2">Turbase</h2>
           <p class="u-custom-font u-text u-text-3" style="text-align: center;">
             <style>
@@ -246,19 +246,19 @@
                 }
               }
             </style>
-            <iframe onclick="alert('clicked iframe')" src="https://www.youtube.com/embed/lgZnXqQUP9U" title="YouTube video player" frameborder="0"
+            <iframe onclick="alert('clicked iframe')" src="https://www.youtube.com/embed/lgZnXqQUP9U"
+              title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </p>
-          <p class="u-custom-font u-text u-text-3">Turbase is a revolutionary new App that keeps your data on your
-            device.&nbsp; It shares data with other devices through IPFS and Arweave blockchains.&nbsp; Phone and web
-            applications access data directly on the device without having to store it themselves or send it over the
-            network.&nbsp; Turbase puts you in control of who you share data with and how much you share.<br>
-            <br>Turbase uses the <a onclick="recordGithubTop()"
-              href="https://github.com/autonomous-interdependent-repositories/AIRport"
+          <p class="u-custom-font u-text u-text-3">Turbase keeps your data on your
+            device.&nbsp; You share data through secure blockchains.&nbsp; Applications access data directly on the
+            device without storing it themselves.&nbsp; Turbase puts you in control of what you share and who you share
+            it.<br>
+            <br>Turbase works though <a onclick="recordGithubTop()"
+              href="https://github.com/beyond-decentralized/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">AIRport
-              Decentralized Application framework</a>.&nbsp; It is now under ​heavy&nbsp;development and will be
-            ​available&nbsp;in 2022.&nbsp; Subscribe to the Turbase channel to stay tuned.
+            </a> techology.&nbsp;
           </p>
           <div class="u-form u-form-1">
             <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
@@ -301,12 +301,11 @@
                 <div alt="" class="u-image u-image-circle u-preserve-proportions u-image-1" data-image-width="150"
                   data-image-height="99"></div>
                 <p class="u-custom-font u-text u-text-1">
-                  <span style="font-size: 1rem;">Turbase contains an ​Advertisement&nbsp;engine on each device.&nbsp; It
-                    is independent of all other devices and eliminates centralized data warehouses.&nbsp; Each Turbase
-                    App requests specific Ads using only the data on its device.&nbsp; It never shares your data with
-                    any Ad provider.<br>
-                    <br>Turbase splits the advertisement revenue between the used Apps and you.&nbsp; When you use
-                    Turbase based Apps you get a cut of the profits.
+                  <span style="font-size: 1rem;">Turbase has an ​Advertisement&nbsp;engine on each device.&nbsp; It
+                    eliminates centralized data warehouses.&nbsp; Turbase
+                    Ads use only the data on its device.&nbsp; Turbase never shares your data with
+                    any Advertisement platform.<br>
+                    <br>Turbase splits Ad revenue between the Apps and you get a cut of the profits.
                   </span>
                   <br>
                 </p>
@@ -338,14 +337,13 @@
           <h1 class="u-custom-font u-text u-text-1">
             <span style="font-weight: 700;">Blockchain</span> secured data sharing
           </h1>
-          <p class="u-custom-font u-text u-text-2">Turbase splits all data into virtual repositories.&nbsp; Each virtual
-            repository is shared ​independently&nbsp;of others and maintains its own private blockchain.&nbsp; ​This
-            ensures data authenticity and allows for conflict resolution.&nbsp; Private data is encrypted while public
-            data stays open for use by everybody.<br>
-            <br>Virtual repository blockchains are themselves shared via ​IPFS (for temporal data) or Arweave (for
-            permanent data) blockchains.
+          <p class="u-custom-font u-text u-text-2">Turbase splits data into repositories.&nbsp; Each
+            repository is shared ​independently&nbsp;of others and has its own private blockchain.&nbsp; Private data
+            is encrypted.<br>Repositories are shared through <a href="https://filecoin.io/" ​>Filecoin</a>
+            and <a href="https://www.arweave.org/">Arweave</a>.
           </p>
-          <a onclick="recordLearnSecurity();" href="https://dataindependence.net/blog/2021/Securing_Turbase_data.html"
+          <a onclick="recordLearnSecurity();"
+            href="https://beyond-decentralized.world/blog/2021/Securing_Turbase_data.html"
             class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-1 u-radius-5 u-btn-1">learn
             more</a>
         </div>
@@ -361,14 +359,14 @@
       <div class="u-align-left u-container-style u-custom-color-2 u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h1 class="u-custom-font u-text u-text-1">Stay tuned</h1>
-          <p class="u-custom-font u-text u-text-2">Turbase and the AIRport engine behind it are now under heavy
-            development stay tuned in on what's going on by subscribing to the monthly newsletter.&nbsp; Checkout the
+          <p class="u-custom-font u-text u-text-2">Turbase and AIRport are under
+            development. Checkout the
             development progress on <a onclick="recordGithubBottom()"
               href="https://github.com/autonomous-interdependent-repositories/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1">Github</a>
-            or visit the <a onclick="recordBlog()" href="https://dataindependence.net/blog/"
+            or visit the <a onclick="recordBlog()" href="https://beyond-decentralized.world/"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2">blog</a>
-            for technical details.
+            for what's happening now.
           </p>
           <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
             <form action="#" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom"
