--- a/public/index.html
+++ b/public/index.html
@@ -253,8 +253,7 @@
           </p>
           <p class="u-custom-font u-text u-text-3">Turbase keeps your data on your
             device.&nbsp; You share data through secure blockchains.&nbsp; Applications access data directly on the
-            device without storing it themselves.&nbsp; Turbase puts you in control of what you share and who you share
-            it.<br>
+            device without storing it themselves.&nbsp; Turbase puts you in control of what you share and with whom.<br>
             <br>Turbase works though <a onclick="recordGithubTop()"
               href="https://github.com/beyond-decentralized/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">AIRport
@@ -303,9 +302,9 @@
                 <p class="u-custom-font u-text u-text-1">
                   <span style="font-size: 1rem;">Turbase has an ​Advertisement&nbsp;engine on each device.&nbsp; It
                     eliminates centralized data warehouses.&nbsp; Turbase
-                    Ads use only the data on its device.&nbsp; Turbase never shares your data with
+                    Ads use only the data on your device.&nbsp; Turbase never shares your data with
                     any Advertisement platform.<br>
-                    <br>Turbase splits Ad revenue between the Apps and you get a cut of the profits.
+                    <br>Turbase shares Ad revenue and you get a cut of the profits.
                   </span>
                   <br>
                 </p>
@@ -361,7 +360,7 @@
           <h1 class="u-custom-font u-text u-text-1">Stay tuned</h1>
           <p class="u-custom-font u-text u-text-2">Turbase and AIRport are under
             development. Checkout the
-            development progress on <a onclick="recordGithubBottom()"
+            progress on <a onclick="recordGithubBottom()"
               href="https://github.com/autonomous-interdependent-repositories/AIRport"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1">Github</a>
             or visit the <a onclick="recordBlog()" href="https://beyond-decentralized.world/"
