Updated stale blog links.

--- a/public/index.html
+++ b/public/index.html
@@ -363,7 +363,7 @@
             progress on <a onclick="recordGithubBottom()"
               href="https://github.com/beyond-decentralized/"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1">Github</a>
-            or visit the <a onclick="recordBlog()" href="https://beyond-decentralized.world/"
+            or visit the <a onclick="recordBlog()" href="https://beyond-decentralized.world/blog.html"
               class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2">blog</a>
             for what's happening now.
           </p>
