Updated e-mail links.

--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@
                   <br>
                 </p>
                 <a onclick="recordLearnRevenue();"
-                  href="https://dataindependence.net/blog/2021/Turbase_-_AIRport_with_Ad_Engine.html"
+                  href="https://beyond-decentralized.world/2021/Turbase_-_AIRport_with_Ad_Engine.html"
                   class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-2 u-radius-8 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">learn
                   more</a>
               </div>
@@ -406,7 +406,7 @@
   <footer class="u-align-center u-clearfix u-custom-color-2 u-footer u-footer" id="sec-619d">
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-custom-font u-small-text u-text u-text-variant u-text-1">Turbase DAO<br>
-        <a onclick="recordContact()" href="mailto:artem.v.shamsutdinov@dataindependence.net?subject=Turbase%20App"
+        <a onclick="recordContact()" href="mailto:artem.v.shamsutdinov@turbase.app?subject=Turbase%20App"
           class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">Contact</a>
       </p>
     </div>
