--- a/Turbase-nicepage/Learn.html
+++ b/Turbase-nicepage/Learn.html
@@ -91,8 +91,8 @@
     
     
     <footer class="u-align-center u-clearfix u-custom-color-2 u-footer u-footer" id="sec-619d"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-custom-font u-small-text u-text u-text-variant u-text-1">Turbase DAO<br>
-          <a href="mailto:artem.v.shamsutdinov@turbase.app?subject=Turbase%20App" class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">Contact</a>
+        <p class="u-custom-font u-small-text u-text u-text-variant u-text-1">Contact<br>
+          <a href="mailto:artem.v.shamsutdinov@dataindependence.net?subject=Turbase%20App" class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">Contact</a>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
