--- a/public/index.html
+++ b/public/index.html
@@ -407,7 +407,7 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-custom-font u-small-text u-text u-text-variant u-text-1">Contact<br>
         <a onclick="recordContact()" href="mailto:artem.v.shamsutdinov@dataindependence.net?subject=Turbase"
-          class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">Contact</a>
+          class="u-active-none u-border-none u-btn u-button-style u-custom-color-1 u-custom-font u-hover-none u-text-white u-btn-1">E-Mail</a>
       </p>
     </div>
   </footer>
